--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:title" content="😻애옹이 - 프로필 링크">
     <meta property="og:description" content="애옹이 조아핫세여..?">
-    <meta property="og:image" content="애옹.jpeg">
+    <meta property="og:image" content="aong.jpeg">
     <script type="text/javascript" src="https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/free/sparta.js"></script>
     <title>😻애옹이 - 프로필 링크</title>
     <style>
@@ -24,7 +24,7 @@
             border-radius: 100%;
             border: 2px solid white;
 
-            background-image: url('애옹.jpeg');
+            background-image: url('aong.jpeg');
             background-position: center;
             background-size: cover;
         }
